# MagnifAI-Showcase

./: .gitignore  README.md
projects/magnifai-ai-os/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
projects/magnifai-ai-os/alembic/: env.py
projects/magnifai-ai-os/alembic/versions/: 001_initial_tables.py
projects/magnifai-ai-os/backend/: __init__.py  config.py  database.py  main.py
projects/magnifai-ai-os/backend/agents/: __init__.py  automation_agent.py  base.py  llm_agent.py  orchestrator.py
projects/magnifai-ai-os/backend/api/: agents.py  connectors.py  health.py  llm.py  monitoring.py  templates.py
projects/magnifai-ai-os/backend/connectors/: __init__.py  base.py  gohighlevel.py  n8n.py  webhook.py
projects/magnifai-ai-os/backend/llm/: __init__.py  client.py  config.py  tracker.py
projects/magnifai-ai-os/backend/llm/providers/: base.py  claude_provider.py  (+2 more)
projects/magnifai-ai-os/backend/models/: __init__.py  agent.py  base.py  client.py  connector.py  deployment.py  execution_log.py  project.py  prompt_template.py  template.py
projects/magnifai-ai-os/backend/monitoring/: __init__.py  alerts.py  logger.py  metrics.py
projects/magnifai-ai-os/backend/templates/: __init__.py  engine.py  validator.py
projects/magnifai-ai-os/tests/: conftest.py  test_agents.py  test_config.py  test_connectors.py  test_database.py  test_health.py  test_llm_api.py  test_monitoring.py  test_template_engine.py  test_template_library.py
projects/magnifai-ai-os/tests/llm/: test_client.py  test_providers.py  test_templates.py  test_tracker.py
projects/video-to-notes/: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
projects/video-to-notes/.claude-plugin/: marketplace.json
projects/video-to-notes/hooks/: hooks.json
projects/video-to-notes/scripts/: download.py  resolve.py  security.py  setup.py  transcribe.py  watch.py  whisper.py
projects/video-to-notes/tests/: test_download.py  test_resolve.py  test_security.py  test_whisper.py
(+99 files in other folders)
